--- a/Examples/UnitTests/Main.storyboard
+++ b/Examples/UnitTests/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="90x-9R-L0j">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="90x-9R-L0j">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -26,7 +26,7 @@
         <!--Sliding Panel Controller-->
         <scene sceneID="jae-IL-2s9">
             <objects>
-                <viewController id="90x-9R-L0j" customClass="SlidingPanelController" customModule="UnitTests" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="90x-9R-L0j" customClass="SlidingPanelController" customModule="SlidingPanelExamples_Programmatically" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="bn0-wt-XE8"/>
                         <viewControllerLayoutGuide type="bottom" id="w4S-D3-vVZ"/>
